# imgsim

./: LICENSE  README.md  final paper.md
data/: fmiq.md  opencv.md  phash.md
data/fmiq/: crop  fmiq.md  fmiqresults  gray  hue  original  resizedown  resizeup  rotate
data/fmiq/all/: aspect  contrast  paint  tint
data/opencv/: aspect  contrast  crop  gray  opencv.md  opencvresults  resizedown  resizeup  rotate
data/opencv/all/: hue  original  paint  tint
data/phash/: phash.md  radishresults
data/phash/dct/: originals  resizeup
data/phash/radial/: crop  originals  resizeup
src/analytics/: key  newkey  opencvresults  process.py  shortcut
src/fmiq/: fmiq-old.py  fmiq.py 
src/fmiq/pi/: avgs.txt  directory  fimqdata  fmiq-process.py  fmiq.py  lookup.txt  results  search.txt
src/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  directory  hist  histogram.cpp
src/opencv_y/: histogram_visualwords.cpp  histograms.txt  similarSearch.py
src/phash/: Makefile  hashes  pHash.h  phash  phash-process.c  phash-process.cpp  phash-time.c  phash.c  phashtest  process  radial_out  radialhashes
src/phash/dct/: aspect  hue  paint  resizedown  rotate  tint
src/phash/lib/: pHash.cpp
src/phash/radial/: aspect  contrast  gray  hue  paint  resizedown  rotate  tint
src/phash/results/: contrast  crop  gray  radial
tests/: KEY
